# asiffer.github.io

./: .gitignore  config.yml  main.py  mkdocs.yaml  pyproject.toml
.github/workflows/: deploy.yml
content/about/: index.md
docs/: blog.md  index.md  research.md
docs/static/: style.css
