[project]
name = "asiffer-github-io"
version = "0.1.0"
description = "Don't build apps, build libraries."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-macros-plugin>=1.4.0",
    "mkdocs-shadcn>=0.9.6",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]

[dependency-groups]
dev = ["black>=25.9.0", "isort>=6.1.0"]
